[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwaslab"
version = "4.0.2"
description = "Python toolkit for handling GWAS summary statistics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [ { name = "Yunye He", email = "gwaslab@gmail.com" } ]
dependencies = [
  "pandas!=1.5,>=1.3",
  "numpy<2,>=1.21.2",
  "matplotlib<3.9,>=3.8",
  "seaborn>=0.12",
  "scipy>=1.12",
  "pysam==0.22.1",
  "adjustText>=0.7.3,<=0.8",
  "scikit-allel>=1.3.5",
  "h5py>=3.10.0",
  "pyarrow",
  "polars>=1.27.0",
  "sumstats-liftover==1.1.0",
  "requests",
  "pyyaml",
  "bitarray",
  "platformdirs"
]

[project.urls]
Homepage = "https://cloufield.github.io/gwaslab/"
Repository = "https://github.com/Cloufield/gwaslab"

[project.scripts]
gwaslab = "gwaslab.CLI.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gwaslab = [
  "data/*",
  "data/**",
  "viz/*.txt",
  "viz/*.json",
  "data/chrX_par/*",
  "data/chrx_par/*",
  "data/chromosomes/*",
  "data/high_ld/*",
  "data/hapmap3_SNPs/*",
  "qc/qc_researved_header.json"
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/test/*",
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

